# agent-marketplace

./: .gitignore  README-circle.md  README-solana.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  v0-build-plan.md  v0-plan.md
app/web/: next.config.ts  package.json
app/web/app/: globals.css  layout.tsx  page.tsx
app/web/app/[agent]/: page.tsx
app/web/app/api/coordinator/: route.ts
app/web/app/dashboard/: page.tsx
app/web/app/docs/: page.tsx
app/web/app/market/: page.tsx
app/web/components/: AgentOverview.tsx  AgentShell.tsx  ApproveDelegation.tsx  AuctionTicker.tsx  CompositionChain.tsx  FundFromArc.tsx  MainApp.tsx  PortfolioView.tsx  StatusPanel.tsx  TaskInput.tsx  WalletButton.tsx
app/web/hooks/: useTaskStream.ts
app/web/lib/: agentKeypair.ts  agents.ts  cctp.ts  delegation.ts  mockData.ts  portfolio-core.ts  sse.ts
app/web/prisma/: schema.prisma
app/web/providers/: SolanaProvider.tsx
programs/agentbazaar/: Anchor.toml
programs/agentbazaar/programs/insurance/: Cargo.toml
programs/agentbazaar/programs/insurance/src/: lib.rs
programs/agentbazaar/programs/registry/: Cargo.toml
programs/agentbazaar/programs/registry/src/: lib.rs
scripts/: fund-insurance.ts  mint-mock-tokens.ts  register-agents.ts  test-x402-offline.ts  test-x402.ts  verify-agents.ts
shared/solana/: package.json  tsconfig.json
shared/solana/idl/: insurance.json  registry.json
shared/solana/src/: index.ts
shared/types/: package.json
shared/types/src/: index.ts
shared/x402/: package.json  tsconfig.json
shared/x402/src/: index.ts  next.ts
(+13 files in other folders)
