[package]
name = "insurance"
version = "0.1.0"
description = "AgentBazaar Insurance Pool — staking and slash refunds"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "insurance"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
