[package]
name = "registry"
version = "0.1.0"
description = "AgentBazaar Registry — agent metadata and reputation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
